LPS-118884 Fix wrong size of the breadcrumb

--- a/modules/apps/questions/questions-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/questions/questions-web/src/main/resources/META-INF/resources/css/main.scss
@@ -219,8 +219,8 @@
 .questions-root {
 	.questions-breadcrumb {
 		background-color: $light;
-		margin-left: -1vw;
-		width: 100vw;
+		margin-left: -1rem;
+		margin-right: -1rem;
 	}
 
 	.breadcrumb-button {
